--- a/.github/workflows/update-ical.yml
+++ b/.github/workflows/update-ical.yml
@@ -3,7 +3,7 @@ name: Update Booking iCal (test)
 on:
   schedule:
     - cron: "0 */6 * * *"   # ogni 6 ore
-  workflow_dispatch:         # permette anche l'avvio manuale
+  workflow_dispatch:
 
 jobs:
   update:
@@ -12,15 +12,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Scarica file ICS di test
+      - name: Scrivi un nuovo ICS di test
         run: |
           echo "BEGIN:VCALENDAR" > booking.ics
           echo "VEVENT: Test aggiornamento automatico $(date)" >> booking.ics
           echo "END:VCALENDAR" >> booking.ics
+          cat booking.ics
 
       - name: Commit e push se ci sono modifiche
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git add booking.ics
-          git diff --quiet && echo "Nessuna modifica" || (git commit -m "Aggiornamento automatico ICS (test)" && git push)
+          git commit -m "Aggiornamento automatico ICS (test)" || echo "Nessuna modifica da committare"
+          git push
