--- a/.github/workflows/update-ical.yml
+++ b/.github/workflows/update-ical.yml
@@ -1,26 +1,27 @@
 name: Update Booking iCal (test)
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"   # ogni 6 ore
   workflow_dispatch:
+  schedule:
+    - cron: '0 */6 * * *'  # Ogni 6 ore
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-  
-           - name: Update file (convert UTC → Italy time)
+      - name: Update file (ora italiana)
         run: |
-          TZ="Europe/Rome"
           echo "BEGIN:VCALENDAR" > booking.txt
-          echo "VEVENT: Test aggiornamento automatico $(date '+%a %b %d %H:%M:%S %Z %Y')" >> booking.txt
+          echo "VEVENT: Test aggiornamento automatico $(TZ='Europe/Rome' date '+%a %b %d %H:%M:%S %Z %Y')" >> booking.txt
           echo "END:VCALENDAR" >> booking.txt
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+
+      - name: Commit e push aggiornamento
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
           git add booking.txt
-          git commit -m "Aggiornamento automatico test $(date -u)" || echo "Nessuna modifica da committare"
+          git commit -m "Aggiornamento automatico test $(TZ='Europe/Rome' date '+%Y-%m-%d %H:%M:%S %Z')"
           git push
