--- a/.github/workflows/update-ical.yml
+++ b/.github/workflows/update-ical.yml
@@ -50,12 +50,9 @@ jobs:
 
       - name: Commit and push updated ICS files
         run: |
-          if ! git diff --quiet; then
-            git config user.name "actions-user"
-            git config user.email "actions@users.noreply.github.com"
-            git add ics/*.ics
-            git commit -m "Aggiornamento automatico ICS $(TZ='Europe/Rome' date '+%Y-%m-%d %H:%M:%S %Z')"
-            git push
-          else
-            echo "Nessun aggiornamento ICS"
-          fi
+         git config user.name "actions-user"
+git config user.email "actions@users.noreply.github.com"
+git add -A
+git commit -m "Forza commit iniziale ICS $(TZ='Europe/Rome' date '+%Y-%m-%d %H:%M:%S %Z')" || true
+git push || true
+
